Commit lingering changes

--- a/client/src/pages/Layout.scss
+++ b/client/src/pages/Layout.scss
@@ -4,8 +4,8 @@ $font-color: black;
 
 .layout{
   display: flex;
+  justify-content: center;
   align-items: center;
-  vertical-align: middle;
 }
 
 #home {
