--- a/client/src/pages/Home.scss
+++ b/client/src/pages/Home.scss
@@ -8,7 +8,7 @@ header {
 
 .taskItems {
   display: flex;
-  justify-content:flex-start;
+  flex-direction: column;
   align-items: center;
   height: 200px;
   border: 3px solid blueviolet;
