--- a/client/src/pages/Home.scss
+++ b/client/src/pages/Home.scss
@@ -10,6 +10,10 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 200px;
+  height: 400px;
   border: 3px solid blueviolet;
+}
+
+.btn-group {
+  padding: 40px;
 }
