--- a/client/src/pages/Home.scss
+++ b/client/src/pages/Home.scss
@@ -12,6 +12,7 @@ header {
   align-items: center;
   height: 600px;
   border: 3px solid blueviolet;
+  background-color: lightblue;
 }
 
 .btn-group {
