--- a/client/src/pages/Home.scss
+++ b/client/src/pages/Home.scss
@@ -1,22 +1,22 @@
-header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 200px;
-  border: 3px solid yellow;
-  background-color: lightcoral;
-}
+// header {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   height: 200px;
+//   border: 3px solid yellow;
+//   background-color: lightcoral;
+// }
 
-.taskItems {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 600px;
-  border: 3px solid blueviolet;
-  background-color: lightblue;
-}
+// .taskItems {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   height: 600px;
+//   border: 3px solid blueviolet;
+//   background-color: lightblue;
+// }
 
-.btn-group {
-  padding: 40px;
-  background-color: orange;
-}
+// .btn-group {
+//   padding: 40px;
+//   background-color: orange;
+// }
