complete home layout

--- a/client/src/pages/Layout.scss
+++ b/client/src/pages/Layout.scss
@@ -21,9 +21,13 @@
 //   background-color: red
 // }
 
-.container {
-  background-color: #F7F0E6;
-  margin: auto;
-  width: 100%;
-  max-width: 600px;
+.layout {
+  &__container {
+    background-color: #f7f0e6;
+    border-bottom: 0.1px #f7f0e6 solid; // border for the context margin-botoom to push against
+    padding: 0 25px;
+    margin: auto;
+    width: 100%;
+    max-width: 600px;
+  }
 }
