create Button component

--- a/client/src/pages/Layout.scss
+++ b/client/src/pages/Layout.scss
@@ -25,6 +25,7 @@
   &__container {
     background-color: #f7f0e6;
     border-bottom: 0.1px #f7f0e6 solid; // border for the context margin-botoom to push against
+    height: 100vh;
     padding: 0 25px;
     margin: auto;
     width: 100%;
