--- a/client/src/components/Navigation.scss
+++ b/client/src/components/Navigation.scss
@@ -3,18 +3,24 @@ nav {
   align-items: center;
   justify-content: space-between;
   border-bottom: 5px rgb(108, 191, 74) dotted;
-  padding: 0.5rem 0;
+  padding: 8px 25px;
   width: 100%;
   max-width: 600px;
   margin: auto;
 
   a {
     display: flex;
-    text-decoration: none;
     color: #000000;
+    padding: 0 15px;
+    text-decoration: none;
 
     * {
       align-items: center;
     }
+  }
+
+  button {
+    width: fit-content !important;
+    padding: 0 15px;
   }
 }
