edit general styling

--- a/client/src/components/Header.scss
+++ b/client/src/components/Header.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 1rem 0;
+  margin-bottom: 1rem;
 
   &__avatar {
     display: flex;
