--- a/client/src/components/Navigation.scss
+++ b/client/src/components/Navigation.scss
@@ -2,6 +2,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: #f7f0e6;
   border-bottom: 5px rgb(108, 191, 74) dotted;
   padding: 8px 25px;
   width: 100%;
