--- a/client/src/pages/Layout.scss
+++ b/client/src/pages/Layout.scss
@@ -24,11 +24,25 @@
 .layout {
   &__container {
     background-color: #f7f0e6;
-    border-bottom: 0.1px #f7f0e6 solid; // border for the context margin-botoom to push against
-    height: 100vh;
-    padding: 0 25px;
+    height: calc(100vh - 3rem);
+    padding: 25px;
     margin: auto;
+    overflow: auto;
     width: 100%;
     max-width: 600px;
+
+    // box shadow
+    -moz-box-shadow: 2px 61px 100px -59px rgba(0, 0, 0, 0.38);
+    -webkit-box-shadow: 2px 61px 100px -59px rgba(0, 0, 0, 0.38);
+    -ms-box-shadow: 2px 61px 100px -59px rgba(0, 0, 0, 0.38);
+    box-shadow: 2px 61px 100px -59px rgba(0, 0, 0, 0.38);
+
+    // hide scrollbar
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+  }
+
+  &__container::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
   }
 }
