--- a/client/src/pages/Home.scss
+++ b/client/src/pages/Home.scss
@@ -24,6 +24,10 @@
 .home {
   section {
     margin-bottom: 1.2rem;
+
+    &:last-of-type {
+      margin-bottom: 0;
+    }
   }
 
   &__button-group {
