--- a/client/src/pages/Layout.scss
+++ b/client/src/pages/Layout.scss
@@ -24,10 +24,10 @@
 .layout {
   &__container {
     background-color: #f7f0e6;
-    height: calc(100vh - 3rem);
+    min-height: calc(100vh - 3.5rem);
+    height: 100%;
     padding: 25px;
     margin: auto;
-    overflow: auto;
     width: 100%;
     max-width: 600px;
 
@@ -36,13 +36,5 @@
     -webkit-box-shadow: 2px 61px 100px -59px rgba(0, 0, 0, 0.38);
     -ms-box-shadow: 2px 61px 100px -59px rgba(0, 0, 0, 0.38);
     box-shadow: 2px 61px 100px -59px rgba(0, 0, 0, 0.38);
-
-    // hide scrollbar
-    -ms-overflow-style: none; /* for Internet Explorer, Edge */
-    scrollbar-width: none; /* for Firefox */
-  }
-
-  &__container::-webkit-scrollbar {
-    display: none; /* for Chrome, Safari, and Opera */
   }
 }
