Add border + step field

--- a/client/src/pages/Create.scss
+++ b/client/src/pages/Create.scss
@@ -4,6 +4,9 @@
 }
 
 .wrapper fieldset {
-  margin: 20px 0;
+  position: relative;
+  border: 2px #000000 solid;
+  margin-bottom: 1rem;
+  box-shadow: 3px 3px;
 }
 
