--- a/client/src/pages/Create.scss
+++ b/client/src/pages/Create.scss
@@ -7,6 +7,8 @@
   position: relative;
   border: 2px #000000 solid;
   margin-bottom: 1rem;
+  padding-left: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   box-shadow: 3px 3px;
 }
-
