--- a/client/src/pages/Create.scss
+++ b/client/src/pages/Create.scss
@@ -1,9 +1,4 @@
-.wrapper {
-  padding: 5px 20px;
-  background-color: pink;
-}
-
-.wrapper fieldset {
+form {
   position: relative;
   border: 2px #000000 solid;
   margin-bottom: 1rem;
@@ -12,3 +7,19 @@
   padding-bottom: 2rem;
   box-shadow: 3px 3px;
 }
+
+.wrapper {
+  padding: 5px 20px;
+  background-color: pink;
+}
+
+.wrapper fieldset {
+  position: relative;
+  border: none;
+  margin-bottom: 1rem;
+  padding-left: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+
