--- a/client/src/pages/Create.scss
+++ b/client/src/pages/Create.scss
@@ -8,16 +8,31 @@ form {
   box-shadow: 3px 3px;
 }
 
-.wrapper {
-  padding: 5px 20px;
-  background-color: pink;
-}
-
 input {
   position: relative;
   box-sizing: border-box;
   width: 90%;
   height: 2rem;
+  margin-top: 1rem;
+}
+
+.task {
+  margin-bottom: 2rem;
+}
+
+label {
+  margin-top: 5rem;
+  margin-bottom: 2rem;
+}
+
+.step-button {
+  width: 6rem;
+  margin-bottom: 2rem;
+}
+
+.wrapper {
+  padding: 5px 20px;
+  // background-color: pink;
 }
 
 .wrapper fieldset {
@@ -25,5 +40,3 @@ input {
   border: none;
   padding-bottom: 2rem;
 }
-
-
