Continue work on create form

--- a/client/src/pages/Create.scss
+++ b/client/src/pages/Create.scss
@@ -6,6 +6,7 @@ form {
   padding-top: 2rem;
   padding-bottom: 2rem;
   box-shadow: 3px 3px;
+  justify-items: normal;
 }
 
 input {
@@ -27,6 +28,7 @@ label {
 
 .step-button {
   width: 6rem;
+  height: 2rem;
   margin-bottom: 2rem;
 }
 
