--- a/client/src/pages/Layout.scss
+++ b/client/src/pages/Layout.scss
@@ -1,26 +1,3 @@
-// $font-family: 'Poppins', sans-serif;
-// $background-color: #F7F0E6;
-// $font-color: black;
-
-// .layout{
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-//   align-items: center;
-// }
-
-// #home {
-//   background-color: #F1FF4A;
-// }
-
-// .icon {
-//   color: purple;
-// }
-
-// .icon:hover {
-//   background-color: red
-// }
-
 .layout {
   &__container {
     background-color: #f7f0e6;
@@ -37,4 +14,9 @@
     -ms-box-shadow: 2px 61px 100px -59px rgba(0, 0, 0, 0.38);
     box-shadow: 2px 61px 100px -59px rgba(0, 0, 0, 0.38);
   }
+}
+
+
+h2 {
+  margin-bottom: 2rem;
 }
