--- a/client/src/pages/Create.scss
+++ b/client/src/pages/Create.scss
@@ -14,7 +14,8 @@ input {
   box-sizing: border-box;
   width: 90%;
   height: 2rem;
-  margin-top: 1rem;
+  margin-top: .25rem;
+  margin-bottom: 1rem;
 }
 
 .task {
@@ -23,7 +24,7 @@ input {
 
 label {
   margin-top: 5rem;
-  margin-bottom: 2rem;
+  // margin-bottom: 2rem;
 }
 
 .step-button {
