--- a/client/src/components/Taskbox.scss
+++ b/client/src/components/Taskbox.scss
@@ -7,6 +7,30 @@
   margin-bottom: 1rem;
   box-shadow: 3px 3px;
 
+  .name {
+    color: red;
+  }
+
+  .button {
+    background-color:#526e8d;
+    border-style:inset;
+    font-size: 1.5em;
+    color: #ffffff;
+    // box-shadow:#526e8d50 -3px -3px;
+    border-radius: 30px;
+    width: fit-content;
+    height: fit-content;
+    padding: .5rem;
+  }
+
+  .button:hover {background-color: #3e8e41}
+
+  .button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
   &:last-of-type {
     margin-bottom: 0;
   }
