Add psuedo code + progressBar file setup

--- a/client/src/components/CreateForm.scss
+++ b/client/src/components/CreateForm.scss
@@ -17,3 +17,7 @@ label {
   // margin-top: 1rem;
 }
 
+// .createTaskButton :hover {
+//   border: 3px #5456e1 solid;
+//   box-shadow: 3px 3px #5456e1;
+// }
