--- a/client/src/components/Navigation.scss
+++ b/client/src/components/Navigation.scss
@@ -9,13 +9,13 @@
   position: sticky;
   top: 0;
   z-index: 99;
-
-  background-color: #f7f0e6;
-  border-bottom: 5px rgb(108, 191, 74) dotted;
+  background-color: white;
+  border-bottom: 3px black solid;
   padding: 16px 25px;
   width: 100%;
   max-width: 600px;
   margin: auto;
+
 
   a {
     display: flex;
