--- a/client/src/components/Navigation.scss
+++ b/client/src/components/Navigation.scss
@@ -9,8 +9,9 @@
   position: sticky;
   top: 0;
   z-index: 99;
-  background-color: white;
+  background-color: #f7f0e6;
   border-bottom: 3px black solid;
+  border-top: 3px black solid;
   padding: 16px 25px;
   width: 100%;
   max-width: 600px;
