Add timer control buttons

--- a/client/src/components/Button.scss
+++ b/client/src/components/Button.scss
@@ -12,3 +12,11 @@
     color: black;
   }
 }
+
+button {
+  background-color: #ffffff;
+  border: 0;
+  cursor: pointer;
+  height: 35px;
+  width: 170px;
+}
