--- a/client/src/components/TaskTimer.scss
+++ b/client/src/components/TaskTimer.scss
@@ -6,3 +6,12 @@
 .numbers {
   font-size: 35px;
 }
+
+.timerbuttons {
+  background-color: #ffffff;
+  border: 1px solid black;
+  cursor: pointer;
+  height: 20px;
+  width: 80px;
+  box-shadow: 3px 3px black;
+}
