--- a/client/src/components/TaskTimer.scss
+++ b/client/src/components/TaskTimer.scss
@@ -1,6 +1,10 @@
 .timer {
   background-color: orchid;
   padding: 4rem;
+  font-size: 25px;
+  font-style: bold;
+  align-items: center;
+  text-align: center;
 }
 
 .numbers {
