--- a/client/src/components/TaskTimer.scss
+++ b/client/src/components/TaskTimer.scss
@@ -1,6 +1,6 @@
 .timer {
-  background-color: orchid;
-  padding: 4rem;
+  // background-color: orchid;
+  padding: 2rem;
   font-size: 25px;
   font-style: bold;
   align-items: center;
@@ -23,5 +23,5 @@
 
 .timer-block {
   width: auto;
-  background-color: lightgreen;
+  // background-color: lightgreen;
 }
