--- a/client/src/components/TaskTimer.scss
+++ b/client/src/components/TaskTimer.scss
@@ -1,10 +1,11 @@
 .timer {
-  background-color: orchid;
+  // background-color: orchid;
   padding: 4rem;
   font-size: 25px;
   font-style: bold;
   align-items: center;
   text-align: center;
+  border: 2px solid black;
 }
 
 .numbers {
@@ -23,5 +24,5 @@
 
 .timer-block {
   width: auto;
-  background-color: lightgreen;
+  // background-color: lightgreen;
 }
