--- a/client/src/components/ProgressBar.scss
+++ b/client/src/components/ProgressBar.scss
@@ -1,4 +1,4 @@
-.progress-bar {
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
+// .progress-bar {
+//   // margin-top: 20px;
+//   // margin-bottom: 20px;
+// }
