--- a/client/src/components/ActiveTaskBox.scss
+++ b/client/src/components/ActiveTaskBox.scss
@@ -1,9 +1,20 @@
 .active-taskbox {
-  position: relative;
+  // position: relative;
   border: 1px #000000 solid;
   height: auto;
   line-height: 2rem;
   padding: 1rem;
   margin-bottom: 1rem;
   box-shadow: 3px 3px;
+}
+
+.button-resume {
+  border: 1px black solid;
+  box-shadow: 2px 2px black;
+  color: black;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-right: 8px;
+  height: 30px;
+  width: 80px;
 }
