--- a/client/src/pages/Create.scss
+++ b/client/src/pages/Create.scss
@@ -48,11 +48,12 @@ label {
   border: 2px #000000 solid;
   height: 3rem;
   width: 150px;
-  box-shadow: 3px 3px;
+  box-shadow: 2px 2px;
   font-size: 18px;
   margin-left: 6px;
   margin-right: 6px;
-  // margin-top: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .task {
