--- a/client/src/pages/Create.scss
+++ b/client/src/pages/Create.scss
@@ -1,5 +1,5 @@
 form {
-  border: 2px #000000 solid;
+  border: 1px #000000 solid;
   margin-bottom: 1rem;
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -41,6 +41,8 @@ label {
   justify-content: center;
   cursor: pointer;
   height: 35px;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 .createTaskButton {
