--- a/client/src/components/TaskTimer.scss
+++ b/client/src/components/TaskTimer.scss
@@ -1,11 +1,13 @@
 .timer {
   // background-color: orchid;
-  padding: 4rem;
+  margin-top: 30px;
+  padding: 2rem;
   font-size: 25px;
   font-style: bold;
   align-items: center;
   text-align: center;
-  border: 2px solid black;
+  border: 1px solid black;
+  box-shadow: 3px 3px black;
 }
 
 .numbers {
