Remove reset button

--- a/client/src/components/Button.scss
+++ b/client/src/components/Button.scss
@@ -1,3 +1,11 @@
+button {
+  background-color: #ffffff;
+  border: 0;
+  cursor: pointer;
+  height: 35px;
+  width: 170px;
+}
+
 .button {
   background-color: #ffffff;
   border: 0;
