--- a/client/src/pages/Task.scss
+++ b/client/src/pages/Task.scss
@@ -6,5 +6,15 @@
   text-align: center;
   border: 1px solid black;
   box-shadow: 3px 3px black;
+  margin-bottom: 30px;
+}
+
+.task-step-progress {
+  padding: 2rem;
+  font-style: bold;
+  align-items: center;
+  text-align: center;
+  border: 1px solid black;
+  box-shadow: 3px 3px black;
   margin-bottom: 40px;
 }
