--- a/client/src/components/Stepbox.scss
+++ b/client/src/components/Stepbox.scss
@@ -4,7 +4,7 @@
   background:#ffffff80;
   border-radius: 25px;
   height: fit-content;
-  width: fit-content;
+  width: auto;
   margin-left: auto;
   margin-right: auto;
   margin-top:1em;
@@ -21,7 +21,7 @@
     color: #ffffff;
     // box-shadow:#526e8d50 -3px -3px;
     border-radius: 30px;
-    width: fit-content;
+    width: auto;
     height: fit-content;
     padding: .5rem;
   }
@@ -30,10 +30,10 @@
 
   .button:active {
   background-color: #3e8e41;
-  box-shadow: 0 5px #666;
+  box-shadow: 3px 3px black;
   transform: translateY(4px);
 }
-  
+
   .expanded_step {
     color: #494847;
   }
@@ -66,7 +66,7 @@
   //   margin: 10px;
   // }
 
- 
+
 }
 
 
