Adjust task page styles/layout + add dummy delete button to active task cards

--- a/client/src/components/ActiveTaskBox.scss
+++ b/client/src/components/ActiveTaskBox.scss
@@ -8,6 +8,18 @@
   box-shadow: 3px 3px;
 }
 
+.button-delete {
+  border: 1px black solid;
+  box-shadow: 2px 2px black;
+  color: black;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  height: 40px;
+  width: 100px;
+}
+
 .button-resume {
   border: 1px black solid;
   box-shadow: 2px 2px black;
@@ -28,7 +40,6 @@
 
 .top-active-task-box {
   display: inline-block;
-
 }
 
 // .duration-value {
