--- a/client/src/pages/Task.scss
+++ b/client/src/pages/Task.scss
@@ -1,6 +1,13 @@
-#task-progress-bar {
+.task-title {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.progress-stats {
   margin-top: 30px;
-  padding: 2rem;
+  padding-top: 10px;
+  // padding-bottom: 10px;
+  // padding-bottom: 30px;
   font-style: bold;
   align-items: center;
   text-align: center;
@@ -9,12 +16,19 @@
   margin-bottom: 30px;
 }
 
-.task-step-progress {
-  padding: 2rem;
-  font-style: bold;
-  align-items: center;
-  text-align: center;
-  border: 1px solid black;
-  box-shadow: 3px 3px black;
-  margin-bottom: 40px;
+#task-timer {
+  padding: 20px;
 }
+
+#task-progress-bar {
+  padding: 20px;
+  padding-bottom: 40px;
+}
+
+// .task-step-progress {
+//   padding-top: 20px;
+//   padding-bottom: 20px;
+//   font-style: bold;
+//   align-items: center;
+//   text-align: center;
+// }
