--- a/client/src/components/TaskTimer.scss
+++ b/client/src/components/TaskTimer.scss
@@ -28,3 +28,17 @@
   width: auto;
   // background-color: lightgreen;
 }
+
+button {
+  background-color: #ffffff;
+  border: 1px solid black;
+  cursor: pointer;
+  height: 20px;
+  width: 80px;
+  padding-left: 6px;
+  padding-right: 6px;
+  margin-left: 6px;
+  margin-right: 6px;
+  margin-top: 10px;
+  box-shadow: 3px 3px black;
+}
