Play with button styles

--- a/client/src/components/Button.scss
+++ b/client/src/components/Button.scss
@@ -1,6 +1,7 @@
 button {
   background-color: #ffffff;
-  border: 0;
+  border: 1px solid black;
+  color: black;
   cursor: pointer;
   height: 35px;
   width: 170px;
@@ -8,15 +9,17 @@ button {
 
 .button {
   background-color: #ffffff;
-  border: 0;
+  border: 1px black solid;
   cursor: pointer;
   height: 35px;
   width: 170px;
 
 
   &--selected {
-    border: 2px #000000 solid;
-    box-shadow: 3px 3px;
-    color: black;
+    // border: 3px black solid;
+    box-shadow: black 4px 4px;
+    // background-color: black;
+    // color: white;
+    font-weight: bold;
   }
 }
