--- a/client/src/components/TaskTimer.scss
+++ b/client/src/components/TaskTimer.scss
@@ -1,11 +1,11 @@
 .timer {
-  font-size: 25px;
+  // font-size: 15px;
   align-items: center;
   text-align: center;
 }
 
-.numbers {
-  font-size: 30px;
+#display {
+  font-size: 25px;
 }
 
 // .timerbuttons {
