--- a/client/src/pages/Task.scss
+++ b/client/src/pages/Task.scss
@@ -6,8 +6,10 @@
 .progress-stats {
   margin-top: 30px;
   padding-top: 10px;
+  padding-bottom: 20px;
   // padding-bottom: 10px;
   // padding-bottom: 30px;
+  background-color: lightsteelblue;
   font-style: bold;
   align-items: center;
   text-align: center;
