Tweak create task form styles

--- a/client/src/pages/Create.scss
+++ b/client/src/pages/Create.scss
@@ -74,3 +74,10 @@ label {
 #submit-button {
   background-color: #C1EFAE;
 }
+
+
+#create-form-step-section {
+  padding-left: 40px;
+  font-size: 15px;
+  font-style: italic;
+}
