--- a/client/src/pages/Task.scss
+++ b/client/src/pages/Task.scss
@@ -18,3 +18,18 @@
   box-shadow: 3px 3px black;
   margin-bottom: 40px;
 }
+
+.motivating-message {
+  color: aquamarine
+}
+
+.done-button-style {
+  border: 1px solid black;
+  box-shadow: 3px 3px black;
+  width: 300px;
+  height: 60px;
+  font-size: 30px;
+  margin-top: 40px;
+  align-items: center;
+  text-align: center;
+}
