--- a/client/src/pages/Task.scss
+++ b/client/src/pages/Task.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,700;1,200;1,400;1,700&display=swap');
+
 #task-progress-bar {
   margin-top: 30px;
   padding: 2rem;
@@ -20,15 +22,21 @@
 }
 
 .motivating-message {
-  color: aquamarine
+  color: black;
 }
 
-.done-button-style {
+.done-button {
+  align-items: center;
+  text-align: center;
+}
+
+#done-button{
   border: 1px solid black;
   box-shadow: 3px 3px black;
   width: 300px;
   height: 60px;
-  font-size: 30px;
+  font-family: Poppins;
+  font-size: 20px;
   margin-top: 40px;
   align-items: center;
   text-align: center;
