--- a/client/src/components/Button.scss
+++ b/client/src/components/Button.scss
@@ -20,3 +20,17 @@ button {
     color: black;
   }
 }
+
+#step-button {
+  background-color: #ffffff;
+  border: 1px solid black;
+  cursor: pointer;
+  height: 20px;
+  width: 80px;
+  padding-left: 6px;
+  padding-right: 6px;
+  margin-left: 6px;
+  margin-right: 6px;
+  margin-top: 10px;
+  box-shadow: 3px 3px black;
+}
