--- a/client/src/pages/Task.scss
+++ b/client/src/pages/Task.scss
@@ -41,10 +41,11 @@
 #done-button{
   border: 1px solid black;
   box-shadow: 3px 3px black;
-  width: 300px;
-  height: 60px;
+  background-color: lightgreen;
+  width: 150px;
+  height: 40px;
   font-family: Poppins;
-  font-size: 20px;
+  font-size: 18px;
   margin-top: 40px;
   align-items: center;
   text-align: center;
